# AIR

./: !_improve.txt  CMakeLists.txt  DH_rotation.cpp  DH_rotation.h  Debug.cpp  MOPSO.h  MOPSOAidFunction.cpp  MOPSOFunction.cpp  Makefile  Matrix.cpp  README.md  TM_score_Combination_Order.h  applyVariables.cpp  checkSimilarity.cpp  createRep.cpp  disposeTM_align.cpp  disposedCode.cpp  disposedCodes.cpp  fileDisposal.cpp  freeUpSpace.cpp  initialization.cpp  inputFilter.cpp  inputFilter.h  inputParticles.cpp  main.cpp  matrixFunction.cpp  multiplyBetterInput.cpp  parameterSettings.cpp  preDispose.cpp  randFixedSum.cpp  readMe.txt  seiveRep.cpp  setTime.cpp
